# tethr

./: .gitignore  AGENTS.md  README.md  package.json  patterns.md  pnpm-lock.yaml  today.md  vite.config.js
.github/workflows/: ci.yml  release.yml
.rovodev/: edu.json
docs/: architecture.md  ccapi-endpoints.md
mock/: ccapi-server.ts
scripts/: clean-build.mjs  download-sidecar.mjs  install-prod-deps.mjs  package-artifact.mjs  prepare-sidecar.mjs  set-version.mjs  setup-sidecar.mjs  setup-sidecar.sh
sfx/: Cargo.toml  build.rs
sfx/src/: main.rs
src/: app.html  hooks.server.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/lib/: formatters.ts  logger.ts
src/lib/components/: CameraConfig.svelte  ConfigMenu.svelte  ConfirmClearModal.svelte  Lightbox.svelte  Modal.svelte  PhotoCard.svelte  PhotoGrid.svelte  SettingsModal.svelte  StatusBar.svelte
src/lib/server/: camera.ts  logger.ts  monitor.ts
src/lib/stores/: camera.svelte.ts  cameraInfo.svelte.ts  db.ts  photos.svelte.ts
src/lib/styles/: buttons.css  forms.css
src/lib/utils/: fullscreen.svelte.ts
src/routes/: +layout.ts  +page.svelte
src/routes/api/camera/: +server.ts
src/routes/api/camera/info/: +server.ts
src/routes/api/contents/: +server.ts
src/routes/api/events/: +server.ts
src/routes/api/fullres/[...path]/: +server.ts
src/routes/api/state/: +server.ts
src/routes/api/thumbnail/[...path]/: +server.ts
