[package]
name = "tethr"
version = "0.2.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tethr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2.3.5"
ureq = "2"

[profile.release]
strip = true       # strip debug symbols — biggest size win
opt-level = "z"    # optimise for size (vs "3" for speed)
lto = true         # link-time optimisation — removes dead code across crates
codegen-units = 1  # single codegen unit — better LTO, smaller binary
panic = "abort"    # no unwinding machinery

